src/readstat_sav_parse.c

#line 1 "src/readstat_sav_parse.rl"

#include <stdlib.h>
#include <unistd.h>
#include "readstat_sav.h"
#include "readstat_sav_parse.h"

typedef struct varlookup {
    char      name[8*4+1];
    int       index;
} varlookup_t;

static int compare_key_varlookup(const void *elem1, const void *elem2) {
    const char *key = (const char *)elem1;
    const varlookup_t *v = (const varlookup_t *)elem2;
    return strcmp(key, v->name);
}

static int compare_varlookups(const void *elem1, const void *elem2) {
    const varlookup_t *v1 = (const varlookup_t *)elem1;
    const varlookup_t *v2 = (const varlookup_t *)elem2;
    return strcmp(v1->name, v2->name);
}


#line 28 "src/readstat_sav_parse.c"
static const int sav_long_variable_parse_start = 1;

static const int sav_long_variable_parse_en_main = 1;


#line 28 "src/readstat_sav_parse.rl"


readstat_error_t sav_parse_long_variable_names_record(void *data, int count, sav_ctx_t *ctx) {
    unsigned char *c_data = (unsigned char *)data;
    varlookup_t *table = malloc(ctx->var_index * sizeof(varlookup_t));
    int i;
    readstat_error_t retval = READSTAT_OK;
    int var_count = ctx->var_index;
    for (i=0; i<var_count; i++) {
        memcpy(table[i].name, ctx->varinfo[i].name, sizeof(ctx->varinfo[0].name));
        table[i].index = ctx->varinfo[i].index;
    }
    qsort(table, var_count, sizeof(varlookup_t), &compare_varlookups);
        
    char temp_key[4*8+1];
    char temp_val[4*64+1];
    unsigned char *str_start = NULL;
    size_t str_len = 0;
    
    char error_buf[1024];
    unsigned char *p = NULL;
    unsigned char *pe = NULL;
    unsigned char *output_buffer = NULL;
    if (ctx->converter) {
        size_t input_len = count;
        size_t output_len = input_len * 4;
        pe = p = output_buffer = malloc(output_len);
        size_t status = iconv(ctx->converter, 
                (readstat_iconv_inbuf_t)&data, &input_len,
                (char **)&pe, &output_len);
        if (status == (size_t)-1) {
            free(output_buffer);
            return READSTAT_ERROR_PARSE;
        }
    } else {
        p = c_data;
        pe = c_data + count;
    }
    unsigned char *eof = pe;

    int cs;

    
#line 78 "src/readstat_sav_parse.c"
	{
	cs = sav_long_variable_parse_start;
	}

#line 83 "src/readstat_sav_parse.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	if ( (*p) < 192u ) {
		if ( 64u <= (*p) && (*p) <= 90u )
			goto tr0;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto tr4;
		} else if ( (*p) >= 224u )
			goto tr3;
	} else
		goto tr2;
	goto st0;
st0:
cs = 0;
	goto _out;
tr0:
#line 98 "src/readstat_sav_parse.rl"
	{ str_start = p; }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 113 "src/readstat_sav_parse.c"
	switch( (*p) ) {
		case 46u: goto st3;
		case 61u: goto tr6;
		case 95u: goto st3;
	}
	if ( (*p) < 64u ) {
		if ( (*p) > 36u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st3;
		} else if ( (*p) >= 35u )
			goto st3;
	} else if ( (*p) > 90u ) {
		if ( (*p) < 224u ) {
			if ( 192u <= (*p) && (*p) <= 223u )
				goto st224;
		} else if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st226;
		} else
			goto st225;
	} else
		goto st3;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	switch( (*p) ) {
		case 46u: goto st4;
		case 61u: goto tr6;
		case 95u: goto st4;
	}
	if ( (*p) < 64u ) {
		if ( (*p) > 36u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st4;
		} else if ( (*p) >= 35u )
			goto st4;
	} else if ( (*p) > 90u ) {
		if ( (*p) < 224u ) {
			if ( 192u <= (*p) && (*p) <= 223u )
				goto st221;
		} else if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st223;
		} else
			goto st222;
	} else
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	switch( (*p) ) {
		case 46u: goto st5;
		case 61u: goto tr6;
		case 95u: goto st5;
	}
	if ( (*p) < 64u ) {
		if ( (*p) > 36u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st5;
		} else if ( (*p) >= 35u )
			goto st5;
	} else if ( (*p) > 90u ) {
		if ( (*p) < 224u ) {
			if ( 192u <= (*p) && (*p) <= 223u )
				goto st218;
		} else if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st220;
		} else
			goto st219;
	} else
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	switch( (*p) ) {
		case 46u: goto st6;
		case 61u: goto tr6;
		case 95u: goto st6;
	}
	if ( (*p) < 64u ) {
		if ( (*p) > 36u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st6;
		} else if ( (*p) >= 35u )
			goto st6;
	} else if ( (*p) > 90u ) {
		if ( (*p) < 224u ) {
			if ( 192u <= (*p) && (*p) <= 223u )
				goto st215;
		} else if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st217;
		} else
			goto st216;
	} else
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	switch( (*p) ) {
		case 46u: goto st7;
		case 61u: goto tr6;
		case 95u: goto st7;
	}
	if ( (*p) < 64u ) {
		if ( (*p) > 36u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st7;
		} else if ( (*p) >= 35u )
			goto st7;
	} else if ( (*p) > 90u ) {
		if ( (*p) < 224u ) {
			if ( 192u <= (*p) && (*p) <= 223u )
				goto st212;
		} else if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st214;
		} else
			goto st213;
	} else
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	switch( (*p) ) {
		case 46u: goto st8;
		case 61u: goto tr6;
		case 95u: goto st8;
	}
	if ( (*p) < 64u ) {
		if ( (*p) > 36u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st8;
		} else if ( (*p) >= 35u )
			goto st8;
	} else if ( (*p) > 90u ) {
		if ( (*p) < 224u ) {
			if ( 192u <= (*p) && (*p) <= 223u )
				goto st209;
		} else if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st211;
		} else
			goto st210;
	} else
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	switch( (*p) ) {
		case 46u: goto st9;
		case 61u: goto tr6;
		case 95u: goto st9;
	}
	if ( (*p) < 64u ) {
		if ( (*p) > 36u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st9;
		} else if ( (*p) >= 35u )
			goto st9;
	} else if ( (*p) > 90u ) {
		if ( (*p) < 224u ) {
			if ( 192u <= (*p) && (*p) <= 223u )
				goto st206;
		} else if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st208;
		} else
			goto st207;
	} else
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) == 61u )
		goto tr6;
	goto st0;
tr6:
#line 98 "src/readstat_sav_parse.rl"
	{ str_len = p - str_start; }
#line 82 "src/readstat_sav_parse.rl"
	{
            memcpy(temp_key, str_start, str_len);
            temp_key[str_len] = '\0';
        }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 319 "src/readstat_sav_parse.c"
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto tr34;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto tr37;
		} else if ( (*p) >= 224u )
			goto tr36;
	} else
		goto tr35;
	goto st0;
tr34:
#line 100 "src/readstat_sav_parse.rl"
	{ str_start = p; }
	goto st227;
st227:
	if ( ++p == pe )
		goto _test_eof227;
case 227:
#line 340 "src/readstat_sav_parse.c"
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st229;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st202;
		} else if ( (*p) >= 224u )
			goto st201;
	} else
		goto st200;
	goto st0;
tr233:
#line 100 "src/readstat_sav_parse.rl"
	{ str_len = p - str_start; }
#line 87 "src/readstat_sav_parse.rl"
	{
            memcpy(temp_val, str_start, str_len);
            temp_val[str_len] = '\0';
        }
#line 71 "src/readstat_sav_parse.rl"
	{
            varlookup_t *found = bsearch(temp_key, table, var_count, sizeof(varlookup_t), &compare_key_varlookup);
            if (found) {
                memcpy(ctx->varinfo[found->index].longname, temp_val, str_len);
                ctx->varinfo[found->index].longname[str_len] = '\0';
            } else if (ctx->error_handler) {
                snprintf(error_buf, sizeof(error_buf), "Failed to find %s\n", temp_key);
                ctx->error_handler(error_buf);
            }
        }
	goto st228;
st228:
	if ( ++p == pe )
		goto _test_eof228;
case 228:
#line 379 "src/readstat_sav_parse.c"
	if ( (*p) < 192u ) {
		if ( 64u <= (*p) && (*p) <= 90u )
			goto tr0;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto tr4;
		} else if ( (*p) >= 224u )
			goto tr3;
	} else
		goto tr2;
	goto st0;
tr2:
#line 98 "src/readstat_sav_parse.rl"
	{ str_start = p; }
	goto st11;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
#line 400 "src/readstat_sav_parse.c"
	if ( 128u <= (*p) && (*p) <= 191u )
		goto st2;
	goto st0;
tr3:
#line 98 "src/readstat_sav_parse.rl"
	{ str_start = p; }
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
#line 412 "src/readstat_sav_parse.c"
	if ( 128u <= (*p) && (*p) <= 191u )
		goto st11;
	goto st0;
tr4:
#line 98 "src/readstat_sav_parse.rl"
	{ str_start = p; }
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
#line 424 "src/readstat_sav_parse.c"
	if ( 128u <= (*p) && (*p) <= 191u )
		goto st12;
	goto st0;
st229:
	if ( ++p == pe )
		goto _test_eof229;
case 229:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st230;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st199;
		} else if ( (*p) >= 224u )
			goto st198;
	} else
		goto st197;
	goto st0;
st230:
	if ( ++p == pe )
		goto _test_eof230;
case 230:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st231;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st196;
		} else if ( (*p) >= 224u )
			goto st195;
	} else
		goto st194;
	goto st0;
st231:
	if ( ++p == pe )
		goto _test_eof231;
case 231:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st232;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st193;
		} else if ( (*p) >= 224u )
			goto st192;
	} else
		goto st191;
	goto st0;
st232:
	if ( ++p == pe )
		goto _test_eof232;
case 232:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st233;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st190;
		} else if ( (*p) >= 224u )
			goto st189;
	} else
		goto st188;
	goto st0;
st233:
	if ( ++p == pe )
		goto _test_eof233;
case 233:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st234;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st187;
		} else if ( (*p) >= 224u )
			goto st186;
	} else
		goto st185;
	goto st0;
st234:
	if ( ++p == pe )
		goto _test_eof234;
case 234:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st235;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st184;
		} else if ( (*p) >= 224u )
			goto st183;
	} else
		goto st182;
	goto st0;
st235:
	if ( ++p == pe )
		goto _test_eof235;
case 235:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st236;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st181;
		} else if ( (*p) >= 224u )
			goto st180;
	} else
		goto st179;
	goto st0;
st236:
	if ( ++p == pe )
		goto _test_eof236;
case 236:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st237;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st178;
		} else if ( (*p) >= 224u )
			goto st177;
	} else
		goto st176;
	goto st0;
st237:
	if ( ++p == pe )
		goto _test_eof237;
case 237:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st238;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st175;
		} else if ( (*p) >= 224u )
			goto st174;
	} else
		goto st173;
	goto st0;
st238:
	if ( ++p == pe )
		goto _test_eof238;
case 238:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st239;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st172;
		} else if ( (*p) >= 224u )
			goto st171;
	} else
		goto st170;
	goto st0;
st239:
	if ( ++p == pe )
		goto _test_eof239;
case 239:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st240;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st169;
		} else if ( (*p) >= 224u )
			goto st168;
	} else
		goto st167;
	goto st0;
st240:
	if ( ++p == pe )
		goto _test_eof240;
case 240:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st241;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st166;
		} else if ( (*p) >= 224u )
			goto st165;
	} else
		goto st164;
	goto st0;
st241:
	if ( ++p == pe )
		goto _test_eof241;
case 241:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st242;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st163;
		} else if ( (*p) >= 224u )
			goto st162;
	} else
		goto st161;
	goto st0;
st242:
	if ( ++p == pe )
		goto _test_eof242;
case 242:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st243;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st160;
		} else if ( (*p) >= 224u )
			goto st159;
	} else
		goto st158;
	goto st0;
st243:
	if ( ++p == pe )
		goto _test_eof243;
case 243:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st244;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st157;
		} else if ( (*p) >= 224u )
			goto st156;
	} else
		goto st155;
	goto st0;
st244:
	if ( ++p == pe )
		goto _test_eof244;
case 244:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st245;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st154;
		} else if ( (*p) >= 224u )
			goto st153;
	} else
		goto st152;
	goto st0;
st245:
	if ( ++p == pe )
		goto _test_eof245;
case 245:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st246;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st151;
		} else if ( (*p) >= 224u )
			goto st150;
	} else
		goto st149;
	goto st0;
st246:
	if ( ++p == pe )
		goto _test_eof246;
case 246:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st247;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st148;
		} else if ( (*p) >= 224u )
			goto st147;
	} else
		goto st146;
	goto st0;
st247:
	if ( ++p == pe )
		goto _test_eof247;
case 247:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st248;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st145;
		} else if ( (*p) >= 224u )
			goto st144;
	} else
		goto st143;
	goto st0;
st248:
	if ( ++p == pe )
		goto _test_eof248;
case 248:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st249;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st142;
		} else if ( (*p) >= 224u )
			goto st141;
	} else
		goto st140;
	goto st0;
st249:
	if ( ++p == pe )
		goto _test_eof249;
case 249:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st250;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st139;
		} else if ( (*p) >= 224u )
			goto st138;
	} else
		goto st137;
	goto st0;
st250:
	if ( ++p == pe )
		goto _test_eof250;
case 250:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st251;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st136;
		} else if ( (*p) >= 224u )
			goto st135;
	} else
		goto st134;
	goto st0;
st251:
	if ( ++p == pe )
		goto _test_eof251;
case 251:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st252;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st133;
		} else if ( (*p) >= 224u )
			goto st132;
	} else
		goto st131;
	goto st0;
st252:
	if ( ++p == pe )
		goto _test_eof252;
case 252:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st253;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st130;
		} else if ( (*p) >= 224u )
			goto st129;
	} else
		goto st128;
	goto st0;
st253:
	if ( ++p == pe )
		goto _test_eof253;
case 253:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st254;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st127;
		} else if ( (*p) >= 224u )
			goto st126;
	} else
		goto st125;
	goto st0;
st254:
	if ( ++p == pe )
		goto _test_eof254;
case 254:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st255;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st124;
		} else if ( (*p) >= 224u )
			goto st123;
	} else
		goto st122;
	goto st0;
st255:
	if ( ++p == pe )
		goto _test_eof255;
case 255:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st256;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st121;
		} else if ( (*p) >= 224u )
			goto st120;
	} else
		goto st119;
	goto st0;
st256:
	if ( ++p == pe )
		goto _test_eof256;
case 256:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st257;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st118;
		} else if ( (*p) >= 224u )
			goto st117;
	} else
		goto st116;
	goto st0;
st257:
	if ( ++p == pe )
		goto _test_eof257;
case 257:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st258;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st115;
		} else if ( (*p) >= 224u )
			goto st114;
	} else
		goto st113;
	goto st0;
st258:
	if ( ++p == pe )
		goto _test_eof258;
case 258:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st259;
	} else if ( (*p) > 223u ) {
		if ( (*p) > 239u ) {
			if ( 240u <= (*p) && (*p) <= 247u )
				goto st112;
		} else if ( (*p) >= 224u )
			goto st111;
	} else
		goto st110;
	goto st0;
st259:
	if ( ++p == pe )
		goto _test_eof259;
case 259:
	if ( (*p) == 9u )
		goto tr233;
	if ( (*p) < 192u ) {
		if ( 32u <= (*p) && (*p) <= 126u )
			goto st260;
	} else if ( (*p) > 223u ) {
